lab/drone/agent-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-agent
  labels:
    app: drone
    role: agent
    owner: tonyhhyip
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone
        role: agent
        owner: tonyhhyip
    spec:
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
      containers:
        - name: drone-agent
          image: drone/agent:0.8
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: docker-socket
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
