lab/drone/server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-master
  labels:
    app: drone
    role: master
    owner: tonyhhyip
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone
        role: master
        owner: tonyhhyip
    spec:
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
      containers:
        - name: drone-master
          image: drone/drone:0.8
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: docker-socket
          ports:
            - containerPort: 8000
              protocol: TCP
            - containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 16Mi
