lab/drone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  labels:
    app: drone
    owner: tonyhhyip
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: grpc
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: drone
    role: master
    owner: tonyhhyip
