lab/drone/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
  labels:
    app: drone
    owner: tonyhhyip
spec:
  rules:
    - host: drone.ysitd.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: drone
              servicePort: 80
